syntax="proto3";
package session;

option go_package="user_service/src/internal/intefaces/output/grpc";

service SessionValidator{
    rpc ValidateSession(ValidateSessionRequest)returns(ValidateSessionResponse);
}

message ValidateSessionRequest{
    string session_id=1;
}
message ValidateSessionResponse{
    bool valid=1;
    int64 user_id=2;
    string error=3;
}